--- a/html/om_mig.html
+++ b/html/om_mig.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -37,8 +37,13 @@
     <main>
       <h1>Om mig.</h1>
 
-      <section class="grid3_1-1">
-        <img src="../img/portræt.png" alt="Billede 2" width="500" height="500"/>
+      <section class="gridtema3_1-1">
+        <img
+          src="../img/portræt.png"
+          alt="Billede 2"
+          width="500"
+          height="500"
+        />
         <div>
           <h2>Hvem er jeg?</h2>
           <p>
@@ -55,7 +60,12 @@
         </div>
       </section>
       <section class="grid2_1-1">
-        <img src="../img/kaffebillede.png" alt="Billede 1" width="500" height="500" />
+        <img
+          src="../img/kaffebillede.png"
+          alt="Billede 1"
+          width="500"
+          height="500"
+        />
         <div>
           <h2>Job</h2>
           <p>
@@ -71,8 +81,13 @@
           </p>
         </div>
       </section>
-      <section class="grid4_1-1">
-        <img src="../img/feriebillede.png" alt="Billede 3" width="500" height="500"/>
+      <section class="gridtema4_1-1">
+        <img
+          src="../img/feriebillede.png"
+          alt="Billede 3"
+          width="500"
+          height="500"
+        />
         <div>
           <h2>Min interesse</h2>
           <p>
