--- a/html/tema2.html
+++ b/html/tema2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -37,9 +37,14 @@
     <main>
       <h1>Tema 2</h1>
       <section class="gridtema2_1-1">
-        <img src="../img/billedetema2.png" alt="billede 1" width="900" height="900"/>
         <div>
           <h2>Grundlæggende web</h2>
+          <img
+            src="../img/billedetema2.png"
+            alt="billede 1"
+            width="900"
+            height="900"
+          />
           <p>
             Tema 2 havde til formål at give mig en grundlæggende introduktion
             til de mest anvendte redskaber i en multimediedesigners
@@ -64,11 +69,14 @@
             allermest på prøve og havde flest komplikationer.
           </p>
         </div>
-      </section>
-      <section class="gridtema02_1-1">
-        <img src="../img/wireframetema2.png" alt="billede 2" width="900" height="900"/>
         <div>
           <h2>Responsivt design</h2>
+          <img
+            src="../img/wireframetema2.png"
+            alt="billede 2"
+            width="900"
+            height="900"
+          />
           <p>
             Her er det wireframe og layoutdiagram, vi blev udleveret. Som
             udgangspunkt koder man altid mobil først, og derefter tilpasser man
@@ -78,39 +86,43 @@
             computere, tablets og telefoner. Et responsivt design opnås ved
             hjælp af medieforespørgsler (media queries).
           </p>
-        </div>
-        <img src="../img/layoutdiagramtema2.png" alt="billede 2" width="900" height="900" />
-        <div>
-        <h2>Responsivt design</h2>
-        <p>
-          Layoutdiagrammer er nyttige, fordi de giver et visuelt overblik over,
-          hvordan en hjemmeside skal se ud. Dette gør også, at kodningsprocessen
-          bliver mere overskuelig, da man kan få et overblik over, hvordan
-          layoutet skal kodes ud fra de HTML-tags, der er defineret på
-          layoutdiagrammet.
-        </p>
+          <img
+            src="../img/layoutdiagramtema2.png"
+            alt="billede 2"
+            width="900"
+            height="900"
+          />
+
+          <p>
+            Layoutdiagrammer er nyttige, fordi de giver et visuelt overblik
+            over, hvordan en hjemmeside skal se ud. Dette gør også, at
+            kodningsprocessen bliver mere overskuelig, da man kan få et overblik
+            over, hvordan layoutet skal kodes ud fra de HTML-tags, der er
+            defineret på layoutdiagrammet.
+          </p>
         </div>
       </section>
       <section class="gridnederst_1-1">
         <div class="link-container">
           <h2>Links</h2>
-          <a href="https://byas.dk/kea/02_website/" target="Link til opgaven"
+          <a href="https://byas.dk/kea/02_website/ " target="Link til opgaven"
             >Link til opgaven</a
           >
-          <a href="../index.html" target="_blank">besøg link</a>
         </div>
         <div>
           <h2>Kompetencer</h2>
           <ul>
-            <li>Introduktion til Figma</li>
-            <li>Grid, media queries og flex</li>
-            <li>Filformater</li>
-            <li>Designkonventioner</li>
-            <li>Intro til HTML og CSS - herunder validering</li>
-            <li>Responsivt design med tilgangen "mobile first"</li>
-            <li>Ophavsret</li>
-            <li>Billedbehandling</li>
-            <li>Introduktion til Filezilla</li>
+            <li>Billede formater</li>
+            <li>Javascript</li>
+            <li>Formgivning og kompositionsprincipper</li>
+            <li>Design af UI og spil elementer</li>
+            <li>Designprincipper</li>
+            <li>Skitseringsteknikker og idegenererings taktikker</li>
+            <li>Paperprototype</li>
+            <li>CSS animation</li>
+            <li>UML aktivitetsprogrammer og State machine diagrammer</li>
+            <li>Individuel projektudvikling</li>
+            <li>Research & genre</li>
           </ul>
         </div>
       </section>
