--- a/html/tema3.html
+++ b/html/tema3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -36,13 +36,15 @@
     <hr />
     <main>
       <h1>Tema 3</h1>
-      <section class="gridtema2_1-1">
-        <img
-          src="../img/tema3.png"
-          alt="billede 1" width="900" height="900"
-        />
+      <section class="gridtema3_1-1">
         <div>
           <h2>Grundlæggende UX/UI</h2>
+          <img
+            src="../img/tema3.png"
+            alt="billede 1"
+            width="900"
+            height="900"
+          />
           <p>
             Tema 3 havde til formål at give mig en grundlæggende forståelse af
             samspillet mellem brugeren og brugergrænseflader. Jeg blev
@@ -71,28 +73,30 @@
             alligevel udfordret af kodningen, på trods af det enkle design.
           </p>
         </div>
-      </section>
-      <section class="gridtema02_1-1">
-        <img
-          src="../img/tema3.png"
-          alt="billede 2" width="900" height="900"
-        />
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
-          sapiente molestiae adipisci possimus expedita deleniti iste vel alias,
-          eveniet provident pariatur voluptates ipsa repellendus facilis
-          laudantium id ipsum ad corrupti.
-        </p>
+        <div>
+          <h2>Eksempel på kode</h2>
+          <img
+            src="../img/tema3.png"
+            alt="billede 2"
+            width="900"
+            height="900"
+          />
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
+            sapiente molestiae adipisci possimus expedita deleniti iste vel
+            alias, eveniet provident pariatur voluptates ipsa repellendus
+            facilis laudantium id ipsum ad corrupti.
+          </p>
+        </div>
       </section>
       <section class="gridnederst_1-1">
         <div class="link-container">
           <h2>Links</h2>
           <a
-            href="http://byas.dk/emnesite/index.html "
+            href="http://byas.dk/emnesite/index.html  "
             target="Link til opgaven"
             >Link til opgaven</a
           >
-          <a href="../index.html" target="_blank">besøg link</a>
         </div>
         <div>
           <h2>Kompetencer</h2>
@@ -111,6 +115,6 @@
       </section>
     </main>
     <hr />
-   <footer>&copy;Anne-Sophie Falck Winther 2024</footer>
+    <footer>&copy;Anne-Sophie Falck Winther 2024</footer>
   </body>
 </html>
