--- a/html/tema4.html
+++ b/html/tema4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -36,34 +36,47 @@
     <hr />
     <main>
       <h1>Tema 4</h1>
-      <section class="gridtema2_1-1">
-        <!-- <img src="../img/tema4.png" alt="billede 1" width="900" height="900"/> -->
+      <section class="gridtema4_1-1">
         <div>
           <h2>Animation</h2>
+          <img
+            src="../img/tema4.png"
+            alt="billede 1"
+            width="900"
+            height="900"
+          />
           <p>
             Tema 4 havde til formål at give mig en grundlæggende forståelse af
-            JavaScript. JavaScript er et programmeringssprog, der bruges til at
-            skabe dynamiske websites eller spil. I dette tema fik jeg til opgave
-            at kode et simpelt spil og finde på mit eget koncept samt designe
-            alle spilelementerne selv. Jeg blev introduceret til teori og
-            designprincipper inden for UI-elementer, figurelementer,
-            baggrundsdesign og kompositionsteknikker. Desuden blev jeg også
-            introduceret til rentegning med vektorgrafik i Adobe Illustrator.
+            JavaScript. JavaScript er et programmeringssprog, der kan bruges til
+            at skabe dynamiske websites eller spil. I dette tema fik jeg til
+            opgave at kode et simpelt spil. Derudover skulle jeg finde på mit
+            eget koncept og designe alle spilelementerne selv. Her blev jeg
+            introduceret til teori og designprincipper inden for UI-elementer,
+            figurelementer, baggrundsdesign og kompositionsteknikker. Derudover
+            blev jeg også introduceret til rentegning med vektorgrafik i Adobe
+            Illustrator.
           </p>
           <p>
-            Dette tema omfattede også aktivitetsdiagrammer og state machine
-            diagrammer, skitseringsteknikker, genereringstaktikker,
-            papirprototyper, CSS-positionering, CSS-animation osv.
+            I dette tema blev jeg også gjort bekendt med aktivitetsdiagrammer og
+            state machine diagrammer, skitseringsteknikker,
+            idé-genereringstaktikker, paperprototypes, CSS-positionering,
+            CSS-animation osv.
           </p>
           <p>
-            Denne opgave satte mig virkelig på prøve. JavaScript-animationer
-            krævede et betydeligt højere kodningsniveau end tidligere opgaver.
-            Derudover var det udfordrende at holde hovedet koldt og bibeholde
-            overblikket over processen.
+            I denne opgave blev jeg virkelig sat på prøve. JavaScript-animation
+            var et betydeligt højere niveau ift. kodning end de tidligere
+            opgaver. Derudover var jeg udfordret med at holde hovedet koldt samt
+            at bibeholde et overblik over processen.
           </p>
         </div>
         <div>
-          <h2>eksempel på kode</h2>
+          <h2>Eksempel på kode</h2>
+          <img
+            src="../img/tema4.png"
+            alt="billede 2"
+            width="900"
+            height="900"
+          />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
             repudiandae tenetur consequuntur aspernatur ipsum dolorum saepe et,
@@ -72,10 +85,7 @@
           </p>
         </div>
       </section>
-      <section class="gridtema02_1-1">
-        <img src="../img/tema4.png" alt="billede 2" width="900" height="900" />
-        <img src="../img/tema4.png" alt="billede 2" width="900" height="900" />
-      </section>
+
       <section class="gridnederst_1-1">
         <div class="link-container">
           <h2>Links</h2>
@@ -84,7 +94,6 @@
             target="Link til opgaven"
             >Link til opgaven</a
           >
-          <a href="../index.html" target="_blank">besøg link</a>
         </div>
         <div>
           <h2>Kompetencer</h2>
