--- a/html/tema5.html
+++ b/html/tema5.html
@@ -151,22 +151,27 @@ TEST
             height="900"
           />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
-            delectus sunt officiis incidunt laudantium veniam labore
-            exercitationem quasi minima, maiores ex repudiandae unde sapiente
-            magnam ad natus commodi expedita. Culpa.
+            Tema 5 havde til formål at give mig et grundlæggende indblik i
+            indholdsproduktion - herunder præproduktion, selve produktion og
+            postproduktion. Her blev jeg præsenteret for optagelse af video med
+            ekstern lyd, Premiere Pro og Audition til redigering. Dette er
+            nødvendig viden for at kunne lave indholdsproduktioner selv samt at
+            kunne kommunikere professionelt med kunder. Derudover blev jeg også
+            introduceret til filformater, HTML forms/videotags i HTML, GitHub og
+            relevante begreber inden for videoproduktion. I dette tema fik vi
+            stillet to forskellige opgaver.
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
-            repudiandae doloremque aspernatur, dolorum quos eos ex veritatis
-            adipisci tenetur excepturi deserunt saepe rerum perferendis ut in
-            distinctio commodi doloribus a.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
+            totam minus voluptatum enim minima! Exercitationem necessitatibus
+            saepe magnam repellendus, nihil deserunt explicabo ullam, doloremque
+            quo ipsam, commodi dolore eius!
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
-            exercitationem maiores officiis neque eligendi vero fugit blanditiis
-            recusandae ea sint unde aut, eius ut reprehenderit, eos delectus,
-            aspernatur similique itaque!
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam,
+            illum. Magnam facere est mollitia veniam eligendi aliquam sit?
+            Mollitia temporibus ut aspernatur exercitationem animi officia
+            recusandae praesentium cumque tenetur sapiente?
           </p>
         </div>
         <div>
@@ -196,22 +201,30 @@ TEST
             height="900"
           />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
-            delectus sunt officiis incidunt laudantium veniam labore
-            exercitationem quasi minima, maiores ex repudiandae unde sapiente
-            magnam ad natus commodi expedita. Culpa.
+            I den anden opgave arbejdede vi i grupper af fire. Her fik vi til
+            opgave at redesigne en virksomheds nuværende hjemmeside. Det var op
+            til os i gruppen at bestemme, hvilket redesign hjemmesiden skulle
+            have (layout), samt på hvilken måde vi ville implementere video.
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
-            repudiandae doloremque aspernatur, dolorum quos eos ex veritatis
-            adipisci tenetur excepturi deserunt saepe rerum perferendis ut in
-            distinctio commodi doloribus a.
+            I denne opgave blev vi introduceret til, hvordan man effektivt
+            arbejder sammen i teams, og i den forbindelse blev vi introduceret
+            til Scrum, Trello og GitHub, som endte med at blive en stor hjælp
+            gennem vores projekt.
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
-            exercitationem maiores officiis neque eligendi vero fugit blanditiis
-            recusandae ea sint unde aut, eius ut reprehenderit, eos delectus,
-            aspernatur similique itaque!
+            Opgaven var en oplagt mulighed for at få genopfrisket alle de ting,
+            vi havde lært gennem første semester. Det gav dermed en mere
+            omfattende forståelse af de elementer, der er vigtige, når det
+            kommer til design, kodning og test.
+          </p>
+          <p>
+            I redesign-opgaven havde jeg ansvaret for at kode undersiden "Vi
+            udfører". Derudover deltog jeg også i mødet for "Scrum of Scrums".
+            Her havde jeg til opgave at videreformidle til de andre scrum
+            masters i de andre grupper, hvor langt vi i vores gruppe var i vores
+            proces, samt hvilke problemstillinger vi var løbet ind i på det
+            givne tidspunkt.
           </p>
         </div>
         <div>
