--- a/html/tema3.html
+++ b/html/tema3.html
@@ -62,8 +62,9 @@
             i 2024." Her prøvede jeg især kræfter med research,
             designkonventioner, kodning samt test af min digitale
             brugergrænseflade. Jeg blev også introduceret til designbegreber
-            såsom moodboards, styletiles, user stories, wireframes,
-            idéudviklingsmetoder og forskellige prototyper.
+            såsom moodboards, styletiles, user stories, værdiord, wireframes,
+            idéudviklingsmetoder, forskellige prototyper samt relevante former
+            for test.
           </p>
           <p>
             I denne opgave besluttede jeg at lave et meget stilrent, enkelt og
@@ -76,16 +77,35 @@
         <div>
           <h2>Eksempel på kode</h2>
           <img
-            src="../img/tema3.png"
+            src="../img/procesbilledetema3.png"
             alt="billede 2"
             width="900"
             height="900"
           />
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
-            sapiente molestiae adipisci possimus expedita deleniti iste vel
-            alias, eveniet provident pariatur voluptates ipsa repellendus
-            facilis laudantium id ipsum ad corrupti.
+            Her ses et udklip af min design- og researchproces. Inden jeg kunne
+            begynde at kode mit emneside, lavede jeg en omfattende research. Jeg
+            udførte blandt andet en desktop research på eksisterende hjemmesider
+            om trends og boligindretning. Derefter lavede jeg et moodboard for
+            at visualisere mine idéer og en styletile, hvor jeg fastlagde
+            farver, knapper og skrifttyper. Jeg valgte tre værdiord for mit
+            design: stilrent, moderne og enkelt.
+          </p>
+          <p>
+            Derefter definerede jeg målgruppen for siden, både primær- og
+            sekundærmålgruppe, og lavede user stories for at præcisere deres
+            behov. Med researchen på plads gik jeg i gang med idéudviklingen og
+            fastlagde layoutet for siderne. Derefter skabte jeg en digital
+            prototype baseret på mine wireframes, hvor jeg implementerede
+            billeder, tekst og knapper. Dette gjorde kodningsprocessen nemmere
+            og mere overskuelig, da alle designvalg var taget på forhånd.
+          </p>
+          <img src="../img/procesbilledetema3.0.png" alt="Billede fra test" />
+          <p>
+            Efter at have skabt en veludarbejdet prototype, testede jeg min side
+            med tænke-højt-test og 5-sekunders-test for at se, hvordan brugerne
+            opfattede designet, og om der var nødvendige ændringer, inden jeg
+            begyndte at kode.
           </p>
         </div>
       </section>
