--- a/html/tema4.html
+++ b/html/tema4.html
@@ -72,7 +72,7 @@
         <div>
           <h2>Eksempel på kode</h2>
           <img
-            src="../img/tema4.png"
+            src="../img/procesbilledetema4.png"
             alt="billede 2"
             width="900"
             height="900"
@@ -83,9 +83,20 @@
             doloribus dicta ad soluta id eligendi? Rem, beatae dicta earum
             temporibus quam aspernatur.
           </p>
+          <img
+            src="../img/procesbilledetema4.0.png"
+            alt="billede 2"
+            width="900"
+            height="900"
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+            maiores perspiciatis non doloremque nihil vero nostrum optio
+            provident ad rem enim sed velit sapiente esse aperiam, fugit officia
+            cumque ex.
+          </p>
         </div>
       </section>
-
       <section class="gridnederst_1-1">
         <div class="link-container">
           <h2>Links</h2>
